log/build_2024-05-08_21-18-01/my_package/stderr.log
  File "/home/suho/mid/install/my_package/lib/python3.8/site-packages/my_package/my_node.py", line 99
    await run_ros_nodes()
    ^
SyntaxError: 'await' outside async function

